k8s/apps/overseerr/overseerr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: overseerr
spec: {}
status: {}
