k8s/apps/overseerr/overseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Manage requests for media library
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/name: Overseerr
    kompose.cmd: kompose convert
    kompose.service.expose: overseerr.mdeleon.dev
    kompose.service.expose.tls-secret: overseerr-tls-cert
    kompose.service.type: clusterip
    kompose.version: 1.31.2 (HEAD)
    kompose.volume.size: 1Gi
    kompose.volume.storage-class-name: nfs-csi-k8s
  creationTimestamp: null
  labels:
    io.kompose.service: overseerr
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
        gethomepage.dev/description: Manage requests for media library
        gethomepage.dev/enabled: "true"
        gethomepage.dev/group: Media
        gethomepage.dev/icon: overseerr.png
        gethomepage.dev/name: Overseerr
        kompose.cmd: kompose convert
        kompose.service.expose: overseerr.mdeleon.dev
        kompose.service.expose.tls-secret: overseerr-tls-cert
        kompose.service.type: clusterip
        kompose.version: 1.31.2 (HEAD)
        kompose.volume.size: 1Gi
        kompose.volume.storage-class-name: nfs-csi-k8s
      creationTimestamp: null
      labels:
        io.kompose.network/overseerr-default: "true"
        io.kompose.service: overseerr
    spec:
      containers:
        - env:
            - name: TZ
              value: America/Los_Angeles
          image: sctx/overseerr:latest
          name: overseerr
          ports:
            - containerPort: 5055
              hostPort: 5055
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /app/config
              name: overseerr
      restartPolicy: Always
      volumes:
        - name: overseerr
          persistentVolumeClaim:
            claimName: overseerr
status: {}
